--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t ghcr.io/ahmedhussiien/react-docker -f Dockerfile.dev
+  - docker build -t ghcr.io/ahmedhussiien/react-docker -f Dockerfile.dev .
 
 script:
   - docker run ghcr.io/ahmedhussiien/react-docker npm run test -- --coverage
