--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
   - docker build -t ghcr.io/ahmedhussiien/react-docker -f Dockerfile.dev .
 
 script:
-  - docker run ghcr.io/ahmedhussiien/react-docker npm run test -- --coverage
+  - docker run -e CI=true ghcr.io/ahmedhussiien/react-docker npm run test --coverage
 
