--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "react-scripts test --watchAll=false",
+    "docker:build_test": "docker build -t flickr_frontend/test -f ./Dockerfile.test .",
+    "docker:run_test": "docker run -e CI=true flickr_frontend/test",
+    "docker:test": "npm run docker:build_test && npm run docker:run_test"
   },
   "eslintConfig": {
     "extends": [
