--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "react-scripts test --watchAll=false",
-    "docker:build_test": "docker build -t flickr_frontend/test -f ./Dockerfile.test .",
-    "docker:run_test": "docker run -e CI=true flickr_frontend/test",
-    "docker:test": "npm run docker:build_test && npm run docker:run_test"
+    "test": "react-scripts test --watchAll=false"
   },
   "eslintConfig": {
     "extends": [
