--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,33 @@ jobs:
 
     - name: Run tests
       run: make run_tests
+
+  
+  build_publish:
+    name: Build & Publish
+    runs-on: ubuntu-18.04
+    needs: test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1 
+      with:
+        registry: ghcr.io
+        username: ${{ secrets.GHCR_USERNAME }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Inject variables
+      uses: rlespinasse/github-slug-action@v3.x
+
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: |
+          ghcr.io/${{secrets.GHCR_USERNAME}}/${{env.GITHUB_REPOSITORY_NAME_PART_SLUG}}:latest
+          ghcr.io/${{secrets.GHCR_USERNAME}}/${{env.GITHUB_REPOSITORY_NAME_PART_SLUG}}:${{env.GITHUB_SHA_SHORT}}
+
