--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,3 +50,27 @@ jobs:
           ghcr.io/${{secrets.GHCR_USERNAME}}/${{env.GITHUB_REPOSITORY_NAME_PART_SLUG}}:latest
           ghcr.io/${{secrets.GHCR_USERNAME}}/${{env.GITHUB_REPOSITORY_NAME_PART_SLUG}}:${{env.GITHUB_SHA_SHORT}}
 
+  deploy:
+    name: Deploy  
+    runs-on: ubuntu-18.04
+    needs: build_publish
+    steps:
+      - name: Configure SSH
+        run: |
+          mkdir -p ~/.ssh/
+          echo "$SSH_KEY" > ~/.ssh/prod.key
+          chmod 600 ~/.ssh/prod.key
+          cat >>~/.ssh/config <<END
+          Host prod
+            HostName $SSH_HOST
+            User $SSH_USER
+            IdentityFile ~/.ssh/prod.key
+            StrictHostKeyChecking no
+          END
+        env:
+          SSH_USER: ${{ secrets.PRODUCTION_SSH_USER }}
+          SSH_KEY: ${{ secrets.PRODUCTION_SSH_KEY }}
+          SSH_HOST: ${{ secrets.PRODUCTION_SSH_HOST }}  
+
+      - name: Deploy to the server
+        run: ssh prod '~/scripts/deploy.sh'
